--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
+    "@vant/area-data": "^1.4.1",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "eslint-import-resolver-webpack": "^0.13.2",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "storejs": "^2.0.5",
+    "styled-components-vue": "^2.0.0",
     "swiper": "^9.4.1",
     "vant": "^2.12.54",
     "vue-router": "^3.3.4"
@@ -29,12 +34,16 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.22.8",
+    "@babel/preset-env": "^7.22.7",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@iconify/json": "^2.2.83",
     "@iconify/vue2": "^2.1.0",
     "ajv": "^8.8.2",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-import": "^1.13.6",
     "commitizen": "^4.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
