--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "eslint-import-resolver-webpack": "^0.13.2",
+    "howler": "^2.2.3",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "storejs": "^2.0.5",
