--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "lyric-parser": "^1.0.1",
+    "plyr": "^3.7.8",
     "storejs": "^2.0.5",
     "styled-components-vue": "^2.0.0",
     "swiper": "^9.4.1",
